[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/bad_planet.gd" type="Script" id=1]
[ext_resource path="res://Assets/kenney_planets/Planets/planet08.png" type="Texture" id=2]
[ext_resource path="res://Assets/kenney_top-down-tanks-redux/PNG/Retina/barricadeMetal.png" type="Texture" id=3]
[ext_resource path="res://Assets/kenney_top-down-tanks-redux/PNG/Retina/specialBarrel1_outline.png" type="Texture" id=4]
[ext_resource path="res://Assets/kenney_space-shooter-redux/PNG/Lasers/laserBlue10.png" type="Texture" id=5]
[ext_resource path="res://Assets/kenney_sci-fi-sounds/Audio/forceField_002.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/kenney_sci-fi-sounds/Audio/laserLarge_001.ogg" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 52.2398

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("explode_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("explode_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explode_sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("red_planet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 477.008

[node name="bad_planet" type="Area2D"]
collision_layer = 2
collision_mask = 64
script = ExtResource( 1 )

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="red_planet" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="gun_base" type="Sprite" parent="red_planet"]
position = Vector2( 0, -50 )
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="gun" type="Sprite" parent="red_planet/gun_base"]
position = Vector2( 0, 5 )
texture = ExtResource( 4 )

[node name="bullet_spawn" type="Position2D" parent="red_planet/gun_base/gun"]
position = Vector2( 0, 33 )
scale = Vector2( 1e-05, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/explode = SubResource( 4 )

[node name="Detect_player" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_player"]
shape = SubResource( 2 )

[node name="fire_rate" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="explode_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="area_entered" from="." to="." method="_on_bad_planet_area_entered"]
[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
